choosing to do this incrementally