@@ -1,245 +1,3 @@
-plugins {
-    id 'java'
+ant.importBuild('./build.xml') { String oldTarget ->
+  return 'ant_' + oldTarget
 }
-
-group = 'com.sweethome3d'
-version = '7.5'
-
-repositories {
-    mavenCentral()
-}
-
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
-sourceSets {
-    main {
-        java {
-            srcDirs = ['src']
-            // Exclude applet sources from main build, handled separately
-            exclude 'com/eteks/sweethome3d/applet/**'
-        }
-        resources {
-            srcDirs = ['src']
-            exclude '**/*.java', '**/*.cpp', '**/*.h', '**/package.html', 'com/eteks/sweethome3d/io/*Catalog*.properties', 'com/eteks/sweethome3d/io/resources/**', '**/help/**', '**/*.svg'
-            // Include patterns resources
-            include 'com/eteks/sweethome3d/io/resources/patterns/**'
-            include '**/*.gif'
-            include '**/*.jpg'
-            include '**/*.png'
-            include '**/*.properties'
-            include '**/resources/**'
-            include 'com/eteks/sweethome3d/model/*.properties'
-            include 'com/eteks/sweethome3d/tools/OperatingSystem*.properties'
-        }
-    }
-    applet {
-        java {
-            srcDirs = ['src']
-            include 'com/eteks/sweethome3d/applet/**'
-        }
-    }
-    test {
-        java {
-            srcDirs = ['test']
-        }
-        resources {
-            srcDirs = ['test']
-            include 'com/eteks/sweethome3d/io/resources/**'
-        }
-    }
-}
-
-configurations {
-    appletCompile.extendsFrom implementation
-}
-
-dependencies {
-  // Potential replacements from Maven
-  // implementation 'com.harium.sunflow:core:0.07.5'
-  // implementation 'org.freehep:freehep-vectorgraphics:2.4'
-
-    // Use local JARs for dependencies not available on Maven Central or missing from public repos
-    implementation files('lib/batik-svgpathparser-1.7.jar')
-    implementation files('lib/freehep-vectorgraphics-svg-2.1.1c.jar')
-    implementation files('lib/iText-2.1.7.jar')
-    implementation files('lib/sunflow-0.07.3i.jar')
-    implementation files('lib/jmf.jar')
-    implementation files('lib/jeksparser-calculator.jar')
-    implementation files('lib/j3dcore.jar')
-    implementation files('lib/j3dutils.jar')
-    implementation files('lib/vecmath.jar')
-    implementation fileTree(dir: 'lib/java3d-1.6', include: ['*.jar'])
-
-    // Add Apple Java Extensions and JNLP API for javax.jnlp and com.apple.eio
-    implementation files('libtest/AppleJavaExtensions.jar')
-    implementation files('libtest/jnlp.jar')
-
-    // Platform-specific native libraries (optional, for runtime)
-    runtimeOnly fileTree(dir: 'lib/macosx', include: ['*.jar', '*.jnilib'])
-    runtimeOnly fileTree(dir: 'lib/windows', include: ['*.jar', '*.dll'])
-    runtimeOnly fileTree(dir: 'lib/linux', include: ['*.jar', '*.so'])
-
-    // Test dependencies
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation fileTree(dir: 'lib', include: ['**/*.jar'])
-    testImplementation fileTree(dir: 'libtest', include: ['**/*.jar'])
-
-    testImplementation sourceSets.main.output
-
-    // FIXME: Could we thin out the repo by depending on Maven repositories?
-    // testImplementation 'abbot:abbot:1.4.0'
-    // testImplementation 'jdepend:jdepend:2.9.1'
-    // testImplementation 'jdom:jdom:1.1'
-}
-
-task cleanBuildDir(type: Delete) {
-    delete 'build'
-}
-
-task compileApplet(type: JavaCompile) {
-    description = 'Compile applet classes with Java 1.2/1.1 compatibility'
-    source = fileTree('src') {
-        include 'com/eteks/sweethome3d/applet/SweetHome3D*.java'
-        include 'com/eteks/sweethome3d/tools/**'
-        include 'com/eteks/sweethome3d/model/**'
-    }
-    destinationDir = file("$buildDir/classes-applet")
-    options.encoding = 'ISO-8859-1'
-    sourceCompatibility = sourceCompatibility
-    targetCompatibility = targetCompatibility
-    classpath = sourceSets.main.compileClasspath + fileTree(dir: 'lib', include: '**/*.jar') + fileTree(dir: 'libtest', include: '**/*.jar')
-    options.debug = false
-    options.debugOptions.debugLevel = 'lines,vars,source'
-}
-
-task compileMain(type: JavaCompile) {
-    description = 'Compile main classes'
-    source = fileTree('src') {
-        exclude 'com/eteks/sweethome3d/applet/**'
-    }
-    destinationDir = file("$buildDir/classes-main")
-    options.encoding = 'ISO-8859-1'
-    sourceCompatibility = sourceCompatibility
-    targetCompatibility = targetCompatibility
-    classpath = sourceSets.main.compileClasspath + fileTree(dir: 'lib', include: '**/*.jar') + fileTree(dir: 'libtest', include: '**/*.jar')
-    options.debug = false
-    options.debugOptions.debugLevel = 'lines,vars,source'
-}
-
-task copyResources(type: Copy) {
-    description = 'Copy non-Java resources to build/classes'
-    from('src') {
-        include '**'
-        exclude '**/*.java', '**/*.cpp', '**/*.h', '**/package.html',
-                'com/eteks/sweethome3d/io/*Catalog*.properties',
-                'com/eteks/sweethome3d/io/resources/**', '**/help/**',
-                '**/*.svg'
-    }
-    from('src') {
-        include 'com/eteks/sweethome3d/io/resources/patterns/**'
-    }
-    destinationDir = file("$buildDir/non-code-resources")
-}
-
-task jarSweetHome3D(type: Jar, dependsOn: ['compileMain', 'compileApplet', 'copyResources']) {
-    description = 'Create SweetHome3D.jar from compiled classes'
-    archiveBaseName = 'SweetHome3D'
-    destinationDirectory = file("$buildDir")
-    dependsOn 'copyResources'
-    from("$buildDir/classes-main")
-    from("$buildDir/classes-applet")
-    from("$buildDir/non-code-resources")
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-}
-
-task buildSweetHome3D(dependsOn: ['cleanBuildDir', 'compileApplet', 'compileMain', 'copyResources', 'jarSweetHome3D']) {
-    description = 'Builds build/SweetHome3D.jar with all its classes'
-}
-
-task applicationJar(type: Jar, dependsOn: ['buildSweetHome3D']) {
-    description = 'Builds build/SweetHome3D.jar application without applet classes'
-    archiveBaseName = 'SweetHome3DStandalone'
-    destinationDirectory = file("$buildDir")
-    from(zipTree("$buildDir/SweetHome3D.jar")) {
-        exclude 'com/eteks/sweethome3d/applet/**'
-    }
-    doLast {
-        copy {
-            from "$buildDir/SweetHome3DStandalone.jar"
-            into "$buildDir"
-            rename { 'SweetHome3D.jar' }
-        }
-        delete "$buildDir/SweetHome3DStandalone.jar"
-    }
-}
-
-task furnitureJar(type: Jar) {
-    description = 'Builds build/Furniture.jar that contains the furniture files'
-    archiveBaseName = 'Furniture'
-    destinationDirectory = file("$buildDir")
-    from('src') {
-        include 'com/eteks/sweethome3d/io/*FurnitureCatalog*.properties'
-        include 'com/eteks/sweethome3d/io/resources/**'
-        exclude 'com/eteks/sweethome3d/io/resources/textures/**'
-        exclude 'com/eteks/sweethome3d/io/resources/patterns/**'
-        exclude 'com/eteks/sweethome3d/io/resources/examples/**'
-    }
-}
-
-task texturesJar(type: Jar) {
-    description = 'Builds build/Textures.jar that contains the textures files'
-    archiveBaseName = 'Textures'
-    destinationDirectory = file("$buildDir")
-    from('src') {
-        include 'com/eteks/sweethome3d/io/*TexturesCatalog*.properties'
-        include 'com/eteks/sweethome3d/io/resources/textures/**'
-    }
-}
-
-task examplesJar(type: Jar) {
-    description = 'Builds build/Examples.jar that contains the examples files'
-    archiveBaseName = 'Examples'
-    destinationDirectory = file("$buildDir")
-    from('src') {
-        include 'com/eteks/sweethome3d/io/resources/examples/**'
-    }
-}
-
-task helpJar(type: Jar) {
-    description = 'Builds build/Help.jar that contains the help files'
-    archiveBaseName = 'Help'
-    destinationDirectory = file("$buildDir")
-    from('src') {
-        include '**/help/**'
-    }
-}
-
-tasks.named('test', Test) {
-  // dependsOn(processResources)
-
-  jvmArgs = [
-    '--add-opens=java.base/java.util=ALL-UNNAMED',
-    '--add-opens=java.base/java.lang=ALL-UNNAMED',
-    '--add-exports=java.desktop/com.apple.eio=ALL-UNNAMED'
-  ]
-}
-
-tasks.register('positionForegroundResource', Copy) {
-  from('src/com/eteks/sweethome3d/io/resources/patterns') {
-    include 'foreground.png'
-  }
-  into "$buildDir/resources/patterns"
-}
-
-tasks.processResources.dependsOn positionForegroundResource
-
-build.dependsOn buildSweetHome3D
-
-// Set encoding for all JavaCompile tasks globally (for Gradle's own compileJava, etc.)
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'ISO-8859-1'
-}
-
-// Default tasks for convenience
-defaultTasks 'buildSweetHome3D'
